--- a/src/application/Main.fxml
+++ b/src/application/Main.fxml
@@ -1,20 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.*?>
+<?import javafx.geometry.*?>
 <?import java.lang.*?>
 <?import javafx.scene.layout.*?>
-<?import javafx.scene.layout.AnchorPane?>
 
-<AnchorPane prefHeight="436.0" prefWidth="538.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1">
-   <children>
-      <AnchorPane layoutX="-95.0" layoutY="-246.0" prefHeight="683.0" prefWidth="641.0">
-         <children>
-            <TextField fx:id="txt_username" layoutX="173.0" layoutY="314.0" />
-            <Label id="txt_username" layoutX="112.0" layoutY="318.0" text="Username" />
-            <Label id="txt_password" layoutX="114.0" layoutY="352.0" text="Password" />
-            <PasswordField fx:id="txt_password" layoutX="173.0" layoutY="348.0" />
-            <Button layoutX="276.0" layoutY="381.0" mnemonicParsing="false" text="Login" />
-         </children>
-      </AnchorPane>
-   </children>
-</AnchorPane>
+<BorderPane fx:id="MainPane" UserData="Phần mềm quản lý rạp chiếu phim" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="768.0" prefWidth="1366.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.MainController">
+   <left>
+      <VBox fx:id="MainMenu" style="-fx-background-color: #BF2F22;" BorderPane.alignment="CENTER" />
+   </left>
+</BorderPane>
