--- a/src/view/SignUp.fxml
+++ b/src/view/SignUp.fxml
@@ -9,7 +9,7 @@
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.layout.BorderPane?>
 
-<BorderPane prefHeight="250.0" prefWidth="350.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="login.LoginControler">
+<BorderPane prefHeight="250.0" prefWidth="350.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.SignUpController" UserData="Đăng ký">
    <center>
       <VBox prefHeight="508.0" prefWidth="693.0" spacing="5.0" BorderPane.alignment="CENTER">
          <children>
@@ -20,9 +20,15 @@
                   <Insets top="15.0" />
                </VBox.margin></Label>
             <PasswordField fx:id="password"/>
+            <Label text="Nhập lại mật khẩu">
+               <VBox.margin>
+                  <Insets top="15.0" />
+               </VBox.margin>
+            </Label>
+            <PasswordField fx:id="rePassword" />
             <BorderPane>
                <center>
-                  <Button mnemonicParsing="false" onAction="#LoginButton_Press" text="Đăng nhập" BorderPane.alignment="CENTER">
+                  <Button mnemonicParsing="false" onAction="#SignUpButton_Press" text="Đăng ký và đăng nhập" BorderPane.alignment="CENTER">
                      <BorderPane.margin>
                         <Insets top="5.0" />
                      </BorderPane.margin></Button>
@@ -31,7 +37,7 @@
                   <Insets top="5.0" />
                </VBox.margin>
                <top>
-                  <Hyperlink onAction="#SignUp_click" text="Chưa có tài khoản? Đăng ký tại đây" BorderPane.alignment="CENTER" />
+                  <Hyperlink onAction="#Login_click" text="Đã có tài khoản? Đăng nhập ngay" BorderPane.alignment="CENTER" />
                </top>
             </BorderPane>
          </children>
