Fix Schedule page + new Movies page

--- a/src/css/Image.css
+++ b/src/css/Image.css
@@ -4,3 +4,6 @@
 	-fx-effect: dropshadow(three-pass-box, rgba(0,0,0,0.8), 10, 0, 0, 0);
 	-fx-background-radius: 5;
 }
+.imageRattingBar {
+	-fx-cursor: Hand;
+}
