--- a/src/view/Home.fxml
+++ b/src/view/Home.fxml
@@ -22,15 +22,12 @@
                            </image>
                         </ImageView>
                         <Label text="Lịch chiếu phim" />
-                        <Text fx:id="scheduleTip1" opacity="0.75" strokeType="OUTSIDE" strokeWidth="0.0" text="Xem, quản lý, chỉnh sửa lịch chiếu phim" textAlignment="CENTER" />
+                        <Text fx:id="Tip1" opacity="0.75" strokeType="OUTSIDE" strokeWidth="0.0" text="Xem, quản lý, chỉnh sửa lịch chiếu phim" textAlignment="CENTER" />
                      </children>
                   </VBox>
                </graphic>
             </Button>
          </children>
-         <padding>
-            <Insets left="5.0" top="5.0" />
-         </padding>
       </AnchorPane>
       <AnchorPane GridPane.columnIndex="1">
          <children>
@@ -44,15 +41,50 @@
                            </image>
                         </ImageView>
                         <Label text="Phim bộ" />
-                        <Text fx:id="scheduleTip2" opacity="0.75" strokeType="OUTSIDE" strokeWidth="0.0" text="Xem, quản lý, chỉnh sửa các bộ phim" textAlignment="CENTER" />
+                        <Text fx:id="Tip2" opacity="0.75" strokeType="OUTSIDE" strokeWidth="0.0" text="Xem, quản lý, chỉnh sửa các bộ phim" textAlignment="CENTER" />
                      </children>
                   </VBox>
                </graphic>
             </Button>
          </children>
-         <padding>
-            <Insets left="5.0" top="5.0" />
-         </padding>
+      </AnchorPane>
+      <AnchorPane GridPane.columnIndex="2">
+         <children>
+            <Button fx:id="rooms" UserData="Rooms" mnemonicParsing="false" onAction="#JumpToWork" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+               <graphic>
+                  <VBox alignment="CENTER">
+                     <children>
+                        <ImageView fitHeight="70.0" fitWidth="70.0" pickOnBounds="true" preserveRatio="true">
+                           <image>
+                              <Image url="@../images/Rooms.png" />
+                           </image>
+                        </ImageView>
+                        <Label text="Phòng" />
+                        <Text fx:id="Tip3" opacity="0.75" strokeType="OUTSIDE" strokeWidth="0.0" text="Xem, quản lý phòng chiếu, thiết bị chiếu" textAlignment="CENTER" />
+                     </children>
+                  </VBox>
+               </graphic>
+            </Button>
+         </children>
+      </AnchorPane>
+      <AnchorPane GridPane.rowIndex="1">
+         <children>
+            <Button fx:id="customer" UserData="Customer" mnemonicParsing="false" onAction="#JumpToWork" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+               <graphic>
+                  <VBox alignment="CENTER">
+                     <children>
+                        <ImageView fitHeight="70.0" fitWidth="70.0" pickOnBounds="true" preserveRatio="true">
+                           <image>
+                              <Image url="@../images/Customer.png" />
+                           </image>
+                        </ImageView>
+                        <Label text="Khách hàng" />
+                        <Text fx:id="Tip4" opacity="0.75" strokeType="OUTSIDE" strokeWidth="0.0" text="Xem, quản lý tập khách hàng" textAlignment="CENTER" />
+                     </children>
+                  </VBox>
+               </graphic>
+            </Button>
+         </children>
       </AnchorPane>
    </children>
    <columnConstraints>
@@ -65,4 +97,7 @@
       <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
       <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
    </rowConstraints>
+   <padding>
+      <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
+   </padding>
 </GridPane>
