--- a/bin/view/Home.fxml
+++ b/bin/view/Home.fxml
@@ -8,96 +8,18 @@
 <?import java.lang.*?>
 <?import javafx.scene.layout.*?>
 
-<GridPane fx:id="pane" hgap="5.0" minHeight="450.0" minWidth="450.0" vgap="5.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.HomeController">
-   <children>
-      <AnchorPane>
-         <children>
-            <Button fx:id="schedule" UserData="Schedule" mnemonicParsing="false" onAction="#JumpToWork" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
-               <graphic>
-                  <VBox alignment="CENTER">
-                     <children>
-                        <ImageView fitHeight="70.0" fitWidth="70.0" pickOnBounds="true" preserveRatio="true">
-                           <image>
-                              <Image url="@../images/Schedule.png" />
-                           </image>
-                        </ImageView>
-                        <Label text="Lịch chiếu phim" />
-                        <Text fx:id="Tip1" opacity="0.75" strokeType="OUTSIDE" strokeWidth="0.0" text="Xem, quản lý, chỉnh sửa lịch chiếu phim" textAlignment="CENTER" />
-                     </children>
-                  </VBox>
-               </graphic>
-            </Button>
-         </children>
-      </AnchorPane>
-      <AnchorPane GridPane.columnIndex="1">
-         <children>
-            <Button fx:id="movies" UserData="Movies" mnemonicParsing="false" onAction="#JumpToWork" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
-               <graphic>
-                  <VBox alignment="CENTER">
-                     <children>
-                        <ImageView fitHeight="70.0" fitWidth="70.0" pickOnBounds="true" preserveRatio="true">
-                           <image>
-                              <Image url="@../images/Movies.png" />
-                           </image>
-                        </ImageView>
-                        <Label text="Phim bộ" />
-                        <Text fx:id="Tip2" opacity="0.75" strokeType="OUTSIDE" strokeWidth="0.0" text="Xem, quản lý, chỉnh sửa các bộ phim" textAlignment="CENTER" />
-                     </children>
-                  </VBox>
-               </graphic>
-            </Button>
-         </children>
-      </AnchorPane>
-      <AnchorPane GridPane.columnIndex="2">
-         <children>
-            <Button fx:id="rooms" UserData="Rooms" mnemonicParsing="false" onAction="#JumpToWork" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
-               <graphic>
-                  <VBox alignment="CENTER">
-                     <children>
-                        <ImageView fitHeight="70.0" fitWidth="70.0" pickOnBounds="true" preserveRatio="true">
-                           <image>
-                              <Image url="@../images/Rooms.png" />
-                           </image>
-                        </ImageView>
-                        <Label text="Phòng" />
-                        <Text fx:id="Tip3" opacity="0.75" strokeType="OUTSIDE" strokeWidth="0.0" text="Xem, quản lý phòng chiếu, thiết bị chiếu" textAlignment="CENTER" />
-                     </children>
-                  </VBox>
-               </graphic>
-            </Button>
-         </children>
-      </AnchorPane>
-      <AnchorPane GridPane.rowIndex="1">
-         <children>
-            <Button fx:id="customer" UserData="Customer" mnemonicParsing="false" onAction="#JumpToWork" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
-               <graphic>
-                  <VBox alignment="CENTER">
-                     <children>
-                        <ImageView fitHeight="70.0" fitWidth="70.0" pickOnBounds="true" preserveRatio="true">
-                           <image>
-                              <Image url="@../images/Customer.png" />
-                           </image>
-                        </ImageView>
-                        <Label text="Khách hàng" />
-                        <Text fx:id="Tip4" opacity="0.75" strokeType="OUTSIDE" strokeWidth="0.0" text="Xem, quản lý tập khách hàng" textAlignment="CENTER" />
-                     </children>
-                  </VBox>
-               </graphic>
-            </Button>
-         </children>
-      </AnchorPane>
-   </children>
-   <columnConstraints>
+<GridPane fx:id="pane" hgap="10.0" vgap="10.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.HomeController">
+  <columnConstraints>
+    <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+    <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
       <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-      <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-      <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-   </columnConstraints>
-   <rowConstraints>
-      <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-      <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-      <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-   </rowConstraints>
+  </columnConstraints>
+  <rowConstraints>
+    <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+    <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+    <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+  </rowConstraints>
    <padding>
-      <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
+      <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
    </padding>
 </GridPane>
