--- a/bin/view/Schedule.fxml
+++ b/bin/view/Schedule.fxml
@@ -1,15 +1,25 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.shape.*?>
-<?import javafx.scene.image.*?>
-<?import javafx.geometry.*?>
-<?import javafx.scene.text.*?>
-<?import java.lang.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
+<?import javafx.geometry.Insets?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.MenuButton?>
+<?import javafx.scene.control.MenuItem?>
+<?import javafx.scene.control.ScrollPane?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.ColumnConstraints?>
+<?import javafx.scene.layout.GridPane?>
+<?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.Pane?>
+<?import javafx.scene.layout.RowConstraints?>
+<?import javafx.scene.layout.VBox?>
+<?import javafx.scene.shape.Line?>
+<?import javafx.scene.text.Font?>
+<?import javafx.scene.text.Text?>
 
-<AnchorPane minHeight="400.0" minWidth="600.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.ScheduleController">
+<AnchorPane minHeight="400.0" minWidth="600.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.ScheduleController">
    <children>
       <GridPane AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
         <columnConstraints>
@@ -23,6 +33,7 @@
          <children>
             <GridPane stylesheets="@../css/Font.css" GridPane.rowIndex="1">
               <columnConstraints>
+                <ColumnConstraints minWidth="10.0" />
                 <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" />
                 <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" />
                 <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" />
@@ -30,16 +41,15 @@
                 <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" />
                 <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" />
                 <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" />
-                <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" />
-                <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" />
+                <ColumnConstraints minWidth="10.0" />
               </columnConstraints>
               <rowConstraints>
                 <RowConstraints minHeight="10.0" vgrow="SOMETIMES" />
               </rowConstraints>
                <children>
-                  <HBox alignment="CENTER_LEFT">
+                  <AnchorPane>
                      <children>
-                        <Button mnemonicParsing="false" styleClass="menuButton" stylesheets="@../css/button.css">
+                        <Button mnemonicParsing="false" styleClass="menuButton" stylesheets="@../css/button.css" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
                            <font>
                               <Font size="18.0" />
                            </font>
@@ -52,129 +62,133 @@
                            </graphic>
                         </Button>
                      </children>
-                  </HBox>
-				  <HBox alignment="CENTER" GridPane.columnIndex="1">
+                  </AnchorPane>
+                  <AnchorPane GridPane.columnIndex="1">
                      <children>
-                        <Button mnemonicParsing="false" styleClass="menuButton" stylesheets="@../css/button.css">
+                        <Button mnemonicParsing="false" styleClass="menuButton" stylesheets="@../css/button.css" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
                            <font>
                               <Font size="18.0" />
                            </font>
                            <graphic>
                               <VBox alignment="CENTER">
                                  <children>
-                                    <Label text="Thứ" />
+                                    <Label text="Thứ hai" />
                                     <Label styleClass="fontBigSize" text="Ngày" />
                                  </children>
                               </VBox>
                            </graphic>
                         </Button>
                      </children>
-                  </HBox>
-                  <HBox alignment="CENTER" GridPane.columnIndex="2">
+                  </AnchorPane>
+                  <AnchorPane GridPane.columnIndex="2">
                      <children>
-                        <Button mnemonicParsing="false" styleClass="menuButton" stylesheets="@../css/button.css">
+                        <Button mnemonicParsing="false" styleClass="menuButton" stylesheets="@../css/button.css" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
                            <font>
                               <Font size="18.0" />
                            </font>
                            <graphic>
                               <VBox alignment="CENTER">
                                  <children>
-                                    <Label text="Thứ" />
+                                    <Label text="Thứ ba" />
                                     <Label styleClass="fontBigSize" text="Ngày" />
                                  </children>
                               </VBox>
                            </graphic>
                         </Button>
                      </children>
-                  </HBox>
-                  <HBox alignment="CENTER" GridPane.columnIndex="3">
+                  </AnchorPane>
+                  <AnchorPane GridPane.columnIndex="3">
                      <children>
-                        <Button mnemonicParsing="false" styleClass="menuButton" stylesheets="@../css/button.css">
+                        <Button mnemonicParsing="false" styleClass="menuButton" stylesheets="@../css/button.css" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
                            <font>
                               <Font size="18.0" />
                            </font>
                            <graphic>
                               <VBox alignment="CENTER">
                                  <children>
-                                    <Label text="Thứ" />
+                                    <Label text="Thứ tư" />
                                     <Label styleClass="fontBigSize" text="Ngày" />
                                  </children>
                               </VBox>
                            </graphic>
                         </Button>
                      </children>
-                  </HBox>
-                  <HBox alignment="CENTER" GridPane.columnIndex="4">
+                  </AnchorPane>
+                  <AnchorPane GridPane.columnIndex="4">
                      <children>
-                        <Button mnemonicParsing="false" styleClass="menuButton" stylesheets="@../css/button.css">
+                        <Button mnemonicParsing="false" styleClass="menuButton" stylesheets="@../css/button.css" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
                            <font>
                               <Font size="18.0" />
                            </font>
                            <graphic>
                               <VBox alignment="CENTER">
                                  <children>
-                                    <Label text="Thứ" />
+                                    <Label text="Thứ năm" />
                                     <Label styleClass="fontBigSize" text="Ngày" />
                                  </children>
                               </VBox>
                            </graphic>
                         </Button>
                      </children>
-                  </HBox>
-                  <HBox alignment="CENTER" GridPane.columnIndex="5">
+                  </AnchorPane>
+                  <AnchorPane GridPane.columnIndex="5">
                      <children>
-                        <Button mnemonicParsing="false" styleClass="menuButton" stylesheets="@../css/button.css">
+                        <Button mnemonicParsing="false" styleClass="menuButton" stylesheets="@../css/button.css" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
                            <font>
                               <Font size="18.0" />
                            </font>
                            <graphic>
                               <VBox alignment="CENTER">
                                  <children>
-                                    <Label text="Thứ" />
+                                    <Label text="Thứ sáu" />
                                     <Label styleClass="fontBigSize" text="Ngày" />
                                  </children>
                               </VBox>
                            </graphic>
                         </Button>
                      </children>
-                  </HBox>
-                  <HBox alignment="CENTER" GridPane.columnIndex="6">
+                  </AnchorPane>
+                  <AnchorPane GridPane.columnIndex="6">
                      <children>
-                        <Button mnemonicParsing="false" styleClass="menuButton" stylesheets="@../css/button.css">
+                        <Button mnemonicParsing="false" styleClass="menuButton" stylesheets="@../css/button.css" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
                            <font>
                               <Font size="18.0" />
                            </font>
                            <graphic>
                               <VBox alignment="CENTER">
                                  <children>
-                                    <Label text="Thứ" />
+                                    <Label text="Thứ bảy" />
                                     <Label styleClass="fontBigSize" text="Ngày" />
                                  </children>
                               </VBox>
                            </graphic>
                         </Button>
                      </children>
-                  </HBox>
-                  <HBox alignment="CENTER" GridPane.columnIndex="7">
+                  </AnchorPane>
+                  <AnchorPane GridPane.columnIndex="7">
                      <children>
-                        <Button mnemonicParsing="false" styleClass="menuButton" stylesheets="@../css/button.css">
+                        <Button mnemonicParsing="false" styleClass="menuButton" stylesheets="@../css/button.css" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
                            <font>
                               <Font size="18.0" />
                            </font>
                            <graphic>
                               <VBox alignment="CENTER">
                                  <children>
-                                    <Label text="Thứ" />
+                                    <Label text="Chủ nhật">
+                                       <VBox.margin>
+                                          <Insets left="-10.0" right="-10.0" />
+                                       </VBox.margin>
+                                    </Label>
                                     <Label styleClass="fontBigSize" text="Ngày" />
                                  </children>
                               </VBox>
                            </graphic>
                         </Button>
                      </children>
-                  </HBox>
-                  <HBox alignment="CENTER_RIGHT" GridPane.columnIndex="8">
+                  </AnchorPane>
+                  <AnchorPane GridPane.columnIndex="8">
                      <children>
-                        <Button alignment="CENTER_RIGHT" mnemonicParsing="false" styleClass="menuButton" stylesheets="@../css/button.css">
+                        <Button alignment="CENTER_RIGHT" mnemonicParsing="false" styleClass="menuButton" stylesheets="@../css/button.css" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
                            <font>
                               <Font size="18.0" />
                            </font>
@@ -187,7 +201,7 @@
                            </graphic>
                         </Button>
                      </children>
-                  </HBox>
+                  </AnchorPane>
                </children>
             </GridPane>
             <ScrollPane style="-fx-background-color: transparent;" vbarPolicy="NEVER" GridPane.rowIndex="2">
@@ -217,11 +231,18 @@
                   <Insets />
                </opaqueInsets>
             </HBox>
-            <MenuButton mnemonicParsing="false" text="Chức năng" GridPane.halignment="RIGHT">
-              <items>
-                <MenuItem mnemonicParsing="false" onAction="#AddScheduleCard" text="Thêm phim vào lịch" />
-              </items>
-            </MenuButton>
+            <HBox alignment="CENTER_RIGHT" spacing="10.0" GridPane.halignment="RIGHT">
+               <children>
+                  <Button mnemonicParsing="false" onAction="#AddScheduleCard" text="Thêm phim vào lịch này" />
+                  <MenuButton mnemonicParsing="false" text="Tên phòng">
+                    <items>
+                      <MenuItem mnemonicParsing="false" text="Phòng 1" />
+                        <MenuItem mnemonicParsing="false" text="Phòng 2" />
+                        <MenuItem mnemonicParsing="false" text="Phòng 3" />
+                    </items>
+                  </MenuButton>
+               </children>
+            </HBox>
          </children>
       </GridPane>
    </children>
