--- a/bin/view/SignUp.fxml
+++ b/bin/view/SignUp.fxml
@@ -1,31 +1,31 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.geometry.*?>
-<?import javafx.scene.shape.*?>
-<?import javafx.scene.canvas.*?>
-<?import javafx.scene.image.*?>
-<?import javafx.scene.control.*?>
-<?import java.lang.*?>
-<?import javafx.scene.layout.*?>
+<?import javafx.geometry.Insets?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Hyperlink?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.PasswordField?>
+<?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.BorderPane?>
+<?import javafx.scene.layout.VBox?>
 
-<BorderPane prefHeight="250.0" prefWidth="350.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.SignUpController" UserData="Đăng ký">
+<BorderPane UserData="Đăng ký" prefHeight="250.0" prefWidth="350.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.SignUpController">
    <center>
       <VBox prefHeight="508.0" prefWidth="693.0" spacing="5.0" BorderPane.alignment="CENTER">
          <children>
             <Label text="Tên tài khoản" />
-            <TextField fx:id="username" />
+            <TextField fx:id="username" promptText="Nhập tên tài khoản" />
             <Label text="Mật khẩu">
                <VBox.margin>
                   <Insets top="15.0" />
                </VBox.margin></Label>
-            <PasswordField fx:id="password"/>
+            <PasswordField fx:id="password" promptText="Nhập mật khẩu" />
             <Label text="Nhập lại mật khẩu">
                <VBox.margin>
                   <Insets top="15.0" />
                </VBox.margin>
             </Label>
-            <PasswordField fx:id="rePassword" />
+            <PasswordField fx:id="rePassword" promptText="Nhập lại mật khẩu" />
             <BorderPane>
                <center>
                   <Button mnemonicParsing="false" onAction="#SignUpButton_Press" text="Đăng ký và đăng nhập" BorderPane.alignment="CENTER">
@@ -37,7 +37,7 @@
                   <Insets top="5.0" />
                </VBox.margin>
                <top>
-                  <Hyperlink onAction="#Login_click" text="Đã có tài khoản? Đăng nhập ngay" BorderPane.alignment="CENTER" />
+                  <Hyperlink onAction="#Login_click" stylesheets="@../css/hyperlink.css" text="Đã có tài khoản? Đăng nhập ngay" BorderPane.alignment="CENTER" />
                </top>
             </BorderPane>
          </children>
