--- a/src/css/chip.css
+++ b/src/css/chip.css
@@ -1,7 +1,8 @@
 .pane{
 	-fx-background-color: white;
 	-fx-background-radius: 10;
-	-fx-border-radius: 10;
+	-fx-border-radius: 15;
 	-fx-border-color: black;
-	-fx-padding: 5 5 5 5;
+	-fx-min-height: 31;
+	-fx-padding: 0 3 0 5;
 }
