--- a/src/view/Customer.fxml
+++ b/src/view/Customer.fxml
@@ -1,5 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import java.lang.*?>
+<?import javafx.geometry.*?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.layout.*?>
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.TableColumn?>
@@ -11,20 +15,6 @@
 <AnchorPane xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.CustomerController">
    <children>
       <BorderPane AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
-         <center>
-            <TableView fx:id="table" BorderPane.alignment="CENTER">
-              <columns>
-                  <TableColumn fx:id="column_makhachhang" prefWidth="130.0" text="Mã khách hàng" />
-                  <TableColumn fx:id="column_mataiKhoan" prefWidth="119.0" text="Mã tài khoản" />
-                <TableColumn fx:id="column_hoten" maxWidth="1.7976931348623157E308" prefWidth="200.0" text="Họ tên" />
-                <TableColumn fx:id="column_email" maxWidth="1.7976931348623157E308" prefWidth="199.0" text="Email" />
-                  <TableColumn fx:id="column_sodienthoai" maxWidth="1.7976931348623157E308" prefWidth="119.0" text="Số điện thoại" />
-              </columns>
-               <BorderPane.margin>
-                  <Insets bottom="10.0" />
-               </BorderPane.margin>
-            </TableView>
-         </center>
          <bottom>
             <AnchorPane stylesheets="@../css/button.css" BorderPane.alignment="CENTER">
                <children>
@@ -42,6 +32,21 @@
                </children>
             </AnchorPane>
          </bottom>
+         <top>
+            <TableView fx:id="table_khachhang" BorderPane.alignment="CENTER">
+              <columns>
+              <TableColumn fx:id="column_sothutu" prefWidth="30.0" text="STT" />
+                  <TableColumn fx:id="column_makhachhang" prefWidth="130.0" text="Mã khách hàng" />
+                  <TableColumn fx:id="column_mataiKhoan" prefWidth="119.0" text="Mã tài khoản" />
+                <TableColumn fx:id="column_hoten" maxWidth="1.7976931348623157E308" prefWidth="200.0" text="Họ tên" />
+                <TableColumn fx:id="column_email" maxWidth="1.7976931348623157E308" prefWidth="199.0" text="Email" />
+                  <TableColumn fx:id="column_sodienthoai" maxWidth="1.7976931348623157E308" prefWidth="119.0" text="Số điện thoại" />
+              </columns>
+               <BorderPane.margin>
+                  <Insets bottom="10.0" />
+               </BorderPane.margin>
+            </TableView>
+         </top>
       </BorderPane>
    </children>
    <padding>
