--- a/src/view/Schedule.fxml
+++ b/src/view/Schedule.fxml
@@ -18,6 +18,7 @@
 <?import javafx.scene.shape.Line?>
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
+<?import javafx.scene.control.ComboBox?>
 
 <AnchorPane minHeight="400.0" minWidth="600.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.ScheduleController">
    <children>
@@ -234,13 +235,15 @@
             <HBox alignment="CENTER_RIGHT" spacing="10.0" GridPane.halignment="RIGHT">
                <children>
                   <Button mnemonicParsing="false" onAction="#AddScheduleCard" text="Thêm phim vào lịch này" />
-                  <MenuButton mnemonicParsing="false" text="Tên phòng">
+                  <ComboBox fx:id="cb_phong" promptText="Chọn phòng">
+                  </ComboBox>
+                     <!--   <MenuButton mnemonicParsing="false" text="Tên phòng">
                     <items>
                       <MenuItem mnemonicParsing="false" text="Phòng 1" />
                         <MenuItem mnemonicParsing="false" text="Phòng 2" />
                         <MenuItem mnemonicParsing="false" text="Phòng 3" />
                     </items>
-                  </MenuButton>
+                  </MenuButton> -->
                </children>
             </HBox>
          </children>
