--- a/bin/view/Service.fxml
+++ b/bin/view/Service.fxml
@@ -1,5 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import java.lang.*?>
+<?import javafx.geometry.*?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.layout.*?>
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.CheckBox?>
@@ -14,7 +18,7 @@
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
 
-<BorderPane nodeOrientation="LEFT_TO_RIGHT" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.ServiceController">
+<BorderPane nodeOrientation="LEFT_TO_RIGHT" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.ServiceController">
    <top>
       <AnchorPane BorderPane.alignment="CENTER">
          <children>
@@ -36,7 +40,8 @@
                      </items>
                   </MenuButton>
                   <TextField fx:id="search" onKeyPressed="#SearchKeyPress" promptText="Tìm kiếm" styleClass="textField" stylesheets="@../css/SearchTextField.css" />
-                  <Button mnemonicParsing="false" text="Tìm kiếm" />
+                  <Button fx:id="btn_timkiem" mnemonicParsing="false" text="Tìm kiếm" />
+                  <Button fx:id="btn_refresh" mnemonicParsing="false" text="Refresh" />
                </children>
             </HBox>
             <Button mnemonicParsing="false" onAction="#AddNewServive" text="Thêm sản phẩm" AnchorPane.rightAnchor="0.0" />
