--- a/src/view/AddNewService.fxml
+++ b/src/view/AddNewService.fxml
@@ -1,5 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import java.lang.*?>
+<?import javafx.geometry.*?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.image.*?>
+<?import javafx.scene.layout.*?>
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.TextArea?>
@@ -11,7 +16,7 @@
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
 
-<BorderPane prefWidth="330.0" userData="Thêm dịch vụ mới" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.AddNewServiceController">
+<BorderPane prefWidth="330.0" userData="Thêm dịch vụ mới" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.AddNewServiceController">
    <left>
       <ImageView fx:id="img_v" fitHeight="200.0" fitWidth="140.0" pickOnBounds="true" BorderPane.alignment="CENTER">
          <image>
@@ -22,9 +27,10 @@
    <center>
       <VBox prefHeight="200.0" prefWidth="100.0" spacing="10.0" BorderPane.alignment="CENTER">
          <children>
-            <TextField fx:id="txt_ten" promptText="Tên sản phẩm" />
-            <TextArea fx:id="txt_mota" promptText="Mô tả" wrapText="true" VBox.vgrow="ALWAYS" />
-            <TextField fx:id="txt_gia" promptText="Giá" />
+            <ComboBox fx:id="cb_nhacungcap" prefWidth="150.0" promptText="Nhà cung cấp" />
+            <TextField fx:id="lb_ten" promptText="Tên sản phẩm" />
+            <TextArea fx:id="lb_mota" promptText="Mô tả" wrapText="true" VBox.vgrow="ALWAYS" />
+            <TextField fx:id="lb_gia" promptText="Giá" />
          </children>
          <padding>
             <Insets left="10.0" />
