--- a/src/usercontrol/view/CartItem.fxml
+++ b/src/usercontrol/view/CartItem.fxml
@@ -1,5 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import java.lang.*?>
+<?import javafx.geometry.*?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.image.*?>
+<?import javafx.scene.layout.*?>
+<?import javafx.scene.text.*?>
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
@@ -12,8 +18,7 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-
-<fx:root type="BorderPane" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1">
+<fx:root type="BorderPane" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1">
    <center>
       <VBox alignment="CENTER_LEFT" spacing="4.0">
          <children>
@@ -39,13 +44,7 @@
    <right>
       <AnchorPane BorderPane.alignment="CENTER">
          <children>
-            <HBox fx:id="bindPane" alignment="CENTER_RIGHT" stylesheets="@../../css/ButtonChair.css" AnchorPane.bottomAnchor="4.0" AnchorPane.rightAnchor="0.0">
-               <children>
-                  <Button mnemonicParsing="false" onAction="#decrease" text="–" />
-                  <Button mnemonicParsing="false" onAction="#increase" text="+" />
-               </children>
-            </HBox>
-            <HBox alignment="CENTER_RIGHT" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="10.0">
+            <HBox alignment="CENTER_RIGHT" AnchorPane.rightAnchor="10.0" AnchorPane.topAnchor="10.0">
                <children>
                   <Label fx:id="_cost" text="Giá tiền">
                      <font>
@@ -59,4 +58,15 @@
          </children>
       </AnchorPane>
    </right>
+   <bottom>
+      <HBox fx:id="bindPane" alignment="CENTER_RIGHT" stylesheets="@../../css/ButtonChair.css" BorderPane.alignment="CENTER">
+         <children>
+            <Button mnemonicParsing="false" onAction="#decrease" text="–" />
+            <Button mnemonicParsing="false" onAction="#increase" text="+" />
+         </children>
+         <BorderPane.margin>
+            <Insets right="10.0" />
+         </BorderPane.margin>
+      </HBox>
+   </bottom>
 </fx:root>
