--- a/src/view/AddNewRoom.fxml
+++ b/src/view/AddNewRoom.fxml
@@ -1,5 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import java.lang.*?>
+<?import javafx.geometry.*?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.image.*?>
+<?import javafx.scene.layout.*?>
+<?import javafx.scene.text.*?>
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
@@ -13,7 +19,7 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<BorderPane userData="Thêm sửa phòng chiếu" prefWidth="450.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.AddNewRoomController">
+<BorderPane fx:id="addNewRoom_borderPane" prefWidth="450.0" userData="Thêm sửa phòng chiếu" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.AddNewRoomController">
    <left>
       <AnchorPane BorderPane.alignment="CENTER">
          <children>
@@ -36,10 +42,19 @@
    <center>
       <VBox prefHeight="200.0" prefWidth="100.0" spacing="5.0" BorderPane.alignment="CENTER">
          <children>
-            <TextField fx:id="title" promptText="Tên phòng" />
+            <TextField fx:id="name" promptText="Tên phòng" />
             <TextField fx:id="capacity" promptText="Sức chứa" />
             <TextField fx:id="chairs" promptText="Số ghế" />
-            <TextField fx:id="status" promptText="Trạng thái" />
+            <HBox>
+               <children>
+                  <Label text="Trạng thái phòng:     " />
+                  <ComboBox fx:id = "status" promptText="Chọn trạng thái ">
+                     <HBox.margin>
+                        <Insets />
+                     </HBox.margin>
+                  </ComboBox>
+               </children>
+            </HBox>
             <TextArea fx:id="description" promptText="Mô tả" VBox.vgrow="ALWAYS" />
          </children>
          <padding>
@@ -52,8 +67,8 @@
          <children>
             <HBox spacing="10.0" stylesheets="@../css/button.css" AnchorPane.rightAnchor="0.0">
                <children>
-                  <Button mnemonicParsing="false" text="Đồng ý" />
-                  <Button mnemonicParsing="false" text="Hủy" />
+                  <Button fx:id = "btn_dongy" mnemonicParsing="false" text="Đồng ý" />
+                  <Button fx:id = "btn_huy" mnemonicParsing="false" text="Hủy" />
                </children>
                <padding>
                   <Insets top="10.0" />
