--- a/bin/view/AddMovieToSchedule.fxml
+++ b/bin/view/AddMovieToSchedule.fxml
@@ -1,5 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import java.lang.*?>
+<?import javafx.geometry.*?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.layout.*?>
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.MenuButton?>
@@ -10,13 +14,15 @@
 <?import javafx.scene.layout.FlowPane?>
 <?import javafx.scene.layout.HBox?>
 
-<BorderPane userData="Thêm phim vào lịch" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.AddMovieToScheduleController">
+<BorderPane userData="Thêm phim vào lịch" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.AddMovieToScheduleController">
    <top>
       <HBox alignment="CENTER_LEFT" spacing="5.0" BorderPane.alignment="CENTER">
          <children>
             <MenuButton fx:id="advance" mnemonicParsing="false" prefHeight="31.0" prefWidth="60.0" stylesheets="@../css/MenuButton.css" text="+" />
-            <TextField onKeyPressed="#FindMovies" styleClass="textField" stylesheets="@../css/SearchTextField.css" />
+            <TextField fx:id="condition" onKeyPressed="#FindMovies" styleClass="textField" stylesheets="@../css/SearchTextField.css" />
             <Button mnemonicParsing="false" text="Tìm kiếm" />
+          <!--   <DatePicker fx:id="datePicker" />
+            <ComboBox fx:id="cb_phong" prefWidth="150.0" /> -->
          </children>
       </HBox>
    </top>
@@ -26,7 +32,7 @@
    <bottom>
       <AnchorPane stylesheets="@../css/button.css" BorderPane.alignment="CENTER">
          <children>
-            <Button mnemonicParsing="false" text="Hủy" AnchorPane.rightAnchor="0.0" />
+            <Button fx:id="btn_huy" mnemonicParsing="false" text="Hủy" AnchorPane.rightAnchor="0.0" />
          </children>
       </AnchorPane>
    </bottom>
